--- a/source/_posts/亮灭屏流程.md
+++ b/source/_posts/亮灭屏流程.md
@@ -7,4 +7,4 @@ categories:
 	- 笔记
 ---
 
-&emsp;&emsp;用户按了 power 键之后，首先涉及到的是 Input 的流程，按键事件最终会从 InputManagerService 传到 PhoneWindowManager 处理，最终这个按键事件是传递到 PhoneWindowManager 的`interceptKeyBeforeQueue() `方法来做业务逻辑的处理。
+&emsp;&emsp;用户按了 power 键之后，首先涉及到的是 Input 的流程，按键事件最终会从 InputManagerService 传到 PhoneWindowManager 处理，最终这个按键事件是传递到 PhoneWindowManager 的`interceptKeyBeforeQueue() `方法中。
