--- a/source/_posts/调试.md
+++ b/source/_posts/调试.md
@@ -9,4 +9,4 @@ categories:
 
 ##### 常用命令
 
-&emsp;&emsp;`adb logcat -b events`打印系统事件的日志，跟踪系统事件的时候常用`adb logcat -b events | grep am_`。
+* `adb logcat -b events`：打印系统事件的日志，跟踪系统事件的时候常用`adb logcat -b events | grep am_`
